fix card padding on small screens

--- a/assets/css/card-style.css
+++ b/assets/css/card-style.css
@@ -14,6 +14,10 @@
     padding: .7rem;
     margin: 1rem;
   }
+
+  .card {
+    padding-bottom: 5rem !important;
+  }
 }
 
 @media screen and (min-width:768px ) {
